--- a/day18/module/index.html
+++ b/day18/module/index.html
@@ -3,11 +3,11 @@
 <html lang = ko>
     <head>
         <meta charset="UTF-8" />
-        <title>Day 17 </title>
+        <title>Day 18 </title>
     </head>
     <body>
         <div id = "output"></div>
-        <script src="index.js">
+        <script type ="Module" src="example01/index.js">
         </script>
     </body>
 </html>
