--- a/day18/calculator/index.html
+++ b/day18/calculator/index.html
@@ -38,6 +38,7 @@
       </div>
       <div class="row">
         <button onclick="handleReset()">C</button>
+        <button onclick="handleOperator('^')">^</button>
       </div>
     </div>
 
